<resources>
    <string name="app_name">Photograbic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="search_for_image">search for image</string>
    <string name="image">Image</string>
    <string name="missing_user_image">https://lh3.googleusercontent.com/proxy/xJecLjcsU1-aRB01MsKBmlJpXiWRBNoJTt6rM3YJQhSE0fMuVRvE905Rooi1Ejr51o-wQIPIBdODywK_b4VVdOBacPs5w1k</string>
    <string name="share">Share</string>
    <string name="web">Web</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="user_image">User Image</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="full_screen_button">Full Screen Button</string>

</resources>