<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ImageDetailActivity">

    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/zoom_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:zoomage_animateOnReset="true"
        app:zoomage_autoCenter="true"
        app:zoomage_autoResetMode="UNDER"
        app:zoomage_maxScale="8"
        app:zoomage_minScale="0.6"
        app:zoomage_restrictBounds="false"
        app:zoomage_translatable="true"
        app:zoomage_zoomable="true" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/bottom_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/zoom_image_view" />

    <ImageView
        android:id="@+id/user_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/user_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        tools:text="Name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/user_image_view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/favorite_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_image_view"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/save_to_favorites" />

    <ImageView
        android:id="@+id/web_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/favorite_image_view"
        app:layout_constraintTop_toBottomOf="@+id/user_image_view"
        app:srcCompat="@drawable/ic_baseline_public_24"
        android:contentDescription="@string/web" />

    <ImageView
        android:id="@+id/share_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/web_image_view"
        app:layout_constraintTop_toBottomOf="@+id/user_image_view"
        app:srcCompat="@drawable/ic_baseline_share_24"
        android:contentDescription="@string/share" />

    <ImageView
        android:id="@+id/fullscreen_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/share_image_view"
        app:layout_constraintTop_toBottomOf="@+id/user_image_view"
        app:srcCompat="@drawable/ic_baseline_fullscreen_24"
        android:contentDescription="@string/full_screen_button" />


</androidx.constraintlayout.widget.ConstraintLayout>